[gd_scene load_steps=5 format=3 uid="uid://s1rjcmfgbki1"]

[ext_resource type="Script" path="res://Scenes/gameover.gd" id="1_n4bfe"]
[ext_resource type="FontFile" uid="uid://c8dolumhrfhc2" path="res://Sprites/W95FA.ttf" id="2_y52mc"]
[ext_resource type="AudioStream" uid="uid://cgdrcaqr4ulnf" path="res://Sound/button-202966.mp3" id="3_idgfh"]
[ext_resource type="AudioStream" uid="uid://ddqyyhj4r2bsg" path="res://Sound/menu-buttom-3-bibs-190018.mp3" id="4_08xlg"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n4bfe")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 255.0
offset_top = 190.0
offset_right = 918.0
offset_bottom = 324.0
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y52mc")
theme_override_font_sizes/font_size = 141
text = "You're fired."

[node name="Retry" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 529.0
offset_top = 366.0
offset_right = 610.0
offset_bottom = 408.0
theme_override_fonts/font = ExtResource("2_y52mc")
theme_override_font_sizes/font_size = 24
text = "Again"

[node name="GiveUp" type="Button" parent="."]
layout_mode = 0
offset_left = 530.0
offset_top = 425.0
offset_right = 611.0
offset_bottom = 462.0
theme_override_fonts/font = ExtResource("2_y52mc")
theme_override_font_sizes/font_size = 24
text = "Im done"

[node name="Hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_idgfh")

[node name="Pressed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_08xlg")
volume_db = 24.0

[connection signal="focus_entered" from="Retry" to="." method="_on_retry_focus_entered"]
[connection signal="mouse_entered" from="Retry" to="." method="_on_retry_mouse_entered"]
[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
[connection signal="focus_entered" from="GiveUp" to="." method="_on_give_up_focus_entered"]
[connection signal="mouse_entered" from="GiveUp" to="." method="_on_give_up_mouse_entered"]
[connection signal="pressed" from="GiveUp" to="." method="_on_give_up_pressed"]
